--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "framework"
   ],
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "autoprefixer": "^9.4.7",
+    "babel-jest": "^24.8.0",
     "clean-css-cli": "^4.2.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
+    "jest": "^24.8.0",
     "node-sass": "^4.12.0",
     "postcss-cli": "^6.1.1",
     "rimraf": "^2.6.3",
@@ -41,7 +45,8 @@
     "watch-js": "rollup --config --watch",
     "deploy": "npm run build",
     "prepublishOnly": "npm run build",
-    "start": "npm run build-sass -- --watch"
+    "start": "npm run build-sass -- --watch",
+    "test": "jest"
   },
   "files": [
     "css",
