--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-import": "^2.17.2",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
+    "node-sass-tilde-importer": "^1.0.2",
     "postcss-cli": "^6.1.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.12.1",
@@ -42,8 +43,8 @@
     "build-cleancss": "cleancss -o css/bedrock.min.css css/bedrock.css",
     "build-cleancss-print": "cleancss -o css/print.min.css css/print.css",
     "build-clean": "rimraf css",
-    "build-sass": "node-sass --output-style expanded --source-map true src/sass/bedrock.sass css/bedrock.css --include-path node_modules",
-    "build-sass-print": "node-sass --output-style expanded --source-map true src/sass/print.sass css/print.css  --include-path node_modules",
+    "build-sass": "node-sass --importer=node_modules/node-sass-tilde-importer --output-style expanded --source-map true src/sass/bedrock.sass css/bedrock.css",
+    "build-sass-print": "node-sass --importer=node_modules/node-sass-tilde-importer --output-style expanded --source-map true src/sass/print.sass css/print.css",
     "build-js": "rollup --config",
     "watch-js": "rollup --config --watch",
     "deploy": "npm run build",
