--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/plugin-transform-classes": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "autoprefixer": "^9.4.7",
     "babel-jest": "^24.8.0",
     "clean-css-cli": "^4.2.1",
@@ -33,8 +34,12 @@
     "postcss-cli": "^6.1.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.12.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-prettier": "^0.6.0"
+    "rollup-plugin-filesize": "^6.1.1",
+    "rollup-plugin-prettier": "^0.6.0",
+    "rollup-plugin-progress": "^1.1.1"
   },
   "scripts": {
     "build": "npm run build-clean && npm run build-sass && npm run build-sass-print && npm run build-autoprefix && npm run build-autoprefix-print && npm run build-cleancss && npm run build-cleancss-print && npm run build-js",
