--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.17.2",
     "jest": "^24.8.0",
+    "mustache": "^3.0.3",
     "node-sass": "^4.12.0",
     "node-sass-tilde-importer": "^1.0.2",
     "postcss-cli": "^6.1.1",
@@ -48,6 +49,7 @@
     "build-cleancss": "cleancss -o css/bedrock.min.css css/bedrock.css",
     "build-cleancss-print": "cleancss -o css/print.min.css css/print.css",
     "build-clean": "rimraf css",
+    "build-docs": "mustache docs/content.json docs/index.mustache > docs/test.html",
     "build-sass": "node-sass --importer=node_modules/node-sass-tilde-importer --output-style expanded --source-map true src/sass/bedrock.sass css/bedrock.css && node-sass --importer=node_modules/node-sass-tilde-importer --output-style expanded --source-map true src/sass/docs.sass docs/css/bedrock.css",
     "build-sass-print": "node-sass --importer=node_modules/node-sass-tilde-importer --output-style expanded --source-map true src/sass/print.sass css/print.css && node-sass --importer=node_modules/node-sass-tilde-importer --output-style expanded --source-map true src/sass/print.sass docs/css/print.css",
     "build-js": "rollup --config",
