--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "build-cleancss": "cleancss -o css/bedrock.min.css css/bedrock.css",
     "build-cleancss-print": "cleancss -o css/print.min.css css/print.css",
     "build-clean": "rimraf css",
-    "build-docs": "mustache docs/content.json docs/index.mustache > docs/test.html",
+    "build-docs": "mustache docs/content.json docs/index.mustache > docs/index.html",
     "build-sass": "node-sass --importer=node_modules/node-sass-tilde-importer --output-style expanded --source-map true src/sass/bedrock.sass css/bedrock.css && node-sass --importer=node_modules/node-sass-tilde-importer --output-style expanded --source-map true src/sass/docs.sass docs/css/bedrock.css",
     "build-sass-print": "node-sass --importer=node_modules/node-sass-tilde-importer --output-style expanded --source-map true src/sass/print.sass css/print.css && node-sass --importer=node_modules/node-sass-tilde-importer --output-style expanded --source-map true src/sass/print.sass docs/css/print.css",
     "build-js": "rollup --config",
