--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,9 +10,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: |
-        npm install
-        npm run build --if-present
+      - run: npm install
+      - run: npm run build --if-present
 
   publish-npm:
     needs: build
